# project_calculator

./: .gitignore  CMakeLists.txt  README.md  input.txt  main.c  main.cpp
libs/: CMakeLists.txt
libs/calculation/: calculation.c  calculation.cpp  calculation.h
libs/convert_expression/: convertion_expression.cpp  convertion_expression.h
libs/notation/: notation.c  notation.cpp  notation.h
libs/stack/: stack.c  stack.cpp  stack.h
libs/test_lib/: stack.cpp  stack.h
libs/variable_tree/: variable_tree.c  variable_tree.cpp  variable_tree.h
